--- a/inference_config.json
+++ b/inference_config.json
@@ -1,10 +1,42 @@
 {
-    "embedding_dim": 22,
-    "hidden": 256,
-    "n_layers": 2,
-    "attn_heads": 4,
-    "feed_forward_dim": 758,
-    "device": "cuda:0",
+  "input_path": "example_folder/inference_input_file.tsv",
+  "fasta_path": "example_folder/inference_input_protein.fasta",
+  "output_path": "example_folder/result2.csv",
+  "device": "cuda:0",
+  "default_config": {
+    "vocab_size":22,
     "window":25,
-    "batch_size": 128
+    "hidden_size": 256,
+    "n_layers":2,
+    "attn_heads":4,
+    "feed_forward_dim":758,
+    "batch_size": 128,
+    "dropout": 0.2
+  },
+
+  "ptm_configs":{
+    "SAPPphos":{
+      "hidden_size":256, 
+      "model_paths": ["data/models/SAPPphos/"]
+    },
+    "SAPP-methylR":{
+      "model_paths": ["data/models/SAPP-methylR/"]
+    },
+    "SAPP-acetylK":{
+      "model_paths": ["data/models/SAPP-acetylK/"]
+    },
+    "SAPP-methylK":{
+      "model_paths": ["data/models/SAPP-methylK/"]
+    },
+    "SAPP-phosY":{
+      "model_paths": ["data/models/SAPP-phosY/"]
+    },
+    "SAPP-sumoK":{
+      "model_paths": ["data/models/SAPP-sumoK/"]
+    },
+    "SAPP-ubiquitinK":{
+      "model_paths": ["data/models/SAPP-ubiquitinK/"]
+    }
   }
+  
+}
