--- a/train_config.json
+++ b/train_config.json
@@ -2,11 +2,10 @@
     "path_config":{
         "train_data_path": "data/paper_data/train.tsv",
         "train_fasta_path": "data/paper_data/train_proteins.fasta",
-        "weight_save_dir": "results/SAPPphos_weight/",
-        "train_rsa_path":"/data1/CYJ_Methyl/paper_data_2025/RSA_folder"
+        "train_rsa_path":"/data1/CYJ_Methyl/paper_data_2025/RSA_folder",
+        "weight_save_dir": "results/SAPPphos_weight/"
     },
     "ptm_config":{
-        "ptm_type": "SAPPphos",
         "target_residue": ["S","T"]
     },
     "model_config":{
@@ -30,6 +29,8 @@
         "schedular_eatmin":0,
         "patient_limit":100, 
         "random_seed":2023,
-        "device": "cuda:0"
+        "device": "cuda:0",
+        "pretrained_model_path": "data/models/SAPPphos/SAPPphos_0.pt",
+        "freeze_backbone": false
     }
   }
